Fix search bar being too wide on Samsung Internet

--- a/browser/src/sass/components/_searchbox.scss
+++ b/browser/src/sass/components/_searchbox.scss
@@ -13,6 +13,7 @@
     input {
         padding: 0.5rem;
         border-bottom: $border-width solid $color-highlight;
+        min-width: 0;
     }
 
     .icon {
